# ollama_intl

./: Cargo.toml  README.md
src/: main.rs  parse.rs  translate.rs  translategemma.txt  types.rs
