[package]
name = "ollama_intl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-openai = { version = "0.33", features = ["chat-completion"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde_yaml = "0.9"
indicatif = { version = "0.18", default-features = false, features = ["tokio", "unicode-width"] }
